--- a/package.json
+++ b/package.json
@@ -3,18 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "concurrently \"yarn gen-types:watch\" \"next dev\"",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "gen-types": "cross-env NO_FONTS=true chakra-cli tokens ./src/theme/index.ts --strict-token-types --strict-component-types",
+    "gen-types:watch": "yarn gen-types --watch ./src/theme/",
+    "postinstall": "yarn gen-types"
   },
   "dependencies": {
+    "@chakra-ui/next-js": "^2.0.1",
+    "@chakra-ui/react": "^2.5.2",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@reduxjs/toolkit": "^1.9.3",
+    "framer-motion": "^10.6.0",
+    "immer": "^9.0.19",
+    "next": "^13.2.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-redux": "^8.0.5"
+  },
+  "devDependencies": {
+    "@chakra-ui/cli": "^2.3.0",
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
-    "next": "13.2.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "5.0.2"
+    "@types/react-redux": "^7.1.25",
+    "concurrently": "^7.6.0",
+    "cross-env": "^7.0.3",
+    "prettier": "^2.8.4",
+    "typescript": "4.9.5"
   }
 }
